force-app/main/default/objects/sugati__Supplier__c/sugati__Supplier__c.object-meta.xml
<CustomObject>
    <label>Supplier</label>
    <nameField>
        <label>Supplier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>