force-app/main/default/objects/sugati__Supplier__c/fields/sugati__ATOL_Company_Email__c.field-meta.xml
<CustomField>
    <fullName>sugati__ATOL_Company_Email__c</fullName>
    <label>ATOL Company Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>