force-app/main/default/objects/sugati__Supplier__c/fields/sugati__ATOL_Flight_Plus_Arranger__c.field-meta.xml
<CustomField>
    <fullName>sugati__ATOL_Flight_Plus_Arranger__c</fullName>
    <label>ATOL Flight Plus Arranger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>