force-app/main/default/objects/sugati__Supplier__c/fields/sugati__Cruise_Fare_Set__c.field-meta.xml
<CustomField>
    <fullName>sugati__Cruise_Fare_Set__c</fullName>
    <label>Cruise Fare Set</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>AB</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>SS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>