force-app/main/default/objects/sugati__Supplier__c/fields/sugati__Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__Margin__c</fullName>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>