force-app/main/default/objects/sugati__Supplier__c/fields/sugati__Margin_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Margin_Type__c</fullName>
    <label>Margin Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>