force-app/main/default/objects/sugati__Supplier__c/fields/sugati__Payment_Terms_Deposit__c.field-meta.xml
<CustomField>
    <fullName>sugati__Payment_Terms_Deposit__c</fullName>
    <inlineHelpText>In Percentage</inlineHelpText>
    <label>Payment Terms - Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>