force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S1_Account_Number_IBAN__c.field-meta.xml
<CustomField>
    <fullName>sugati__S1_Account_Number_IBAN__c</fullName>
    <label>1. Account Number/IBAN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>