force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S1_Bank_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>sugati__S1_Bank_Address_Line_1__c</fullName>
    <label>1. Bank Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>