force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S2_Account_Number_IBAN__c.field-meta.xml
<CustomField>
    <fullName>sugati__S2_Account_Number_IBAN__c</fullName>
    <label>2. Account Number/IBAN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>