force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S2_Bank_Payee_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__S2_Bank_Payee_Currency__c</fullName>
    <label>2. Bank Payee Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>