force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S2_Payee_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S2_Payee_Bank_Name__c</fullName>
    <label>2. Payee Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>