force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S2_PostCode__c.field-meta.xml
<CustomField>
    <fullName>sugati__S2_PostCode__c</fullName>
    <label>2. PostCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>