force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S2_Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__S2_Swift_Code__c</fullName>
    <label>2. Swift Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>