force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_ABTA_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_ABTA_Number__c</fullName>
    <label>ABTA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>