force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Active_Rate_Count__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Active_Rate_Count__c</fullName>
    <inlineHelpText>Count of the rate records which are available for the use.</inlineHelpText>
    <label>Active Rate Count</label>
    <summaryFilterItems>
        <field>sugati__RA_Rate__c.sugati__Archived__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__RA_Rate__c.sugati__RA_Supplier__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>