force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Activities_Off_Site__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Activities_Off_Site__c</fullName>
    <label>Activities Off Site</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access to Great Barrier Reef</fullName>
            </value>
            <value>
                <fullName>Adrenaline Activities</fullName>
            </value>
            <value>
                <fullName>Amusement Park</fullName>
            </value>
            <value>
                <fullName>Animal Encounters</fullName>
            </value>
            <value>
                <fullName>Art Galleries</fullName>
            </value>
            <value>
                <fullName>Battlefield Tours</fullName>
            </value>
            <value>
                <fullName>Beach</fullName>
            </value>
            <value>
                <fullName>Big 5</fullName>
            </value>
            <value>
                <fullName>Big 6</fullName>
            </value>
            <value>
                <fullName>Big 7</fullName>
            </value>
            <value>
                <fullName>Big 8</fullName>
            </value>
            <value>
                <fullName>Big 9</fullName>
            </value>
            <value>
                <fullName>Bird Watching</fullName>
            </value>
            <value>
                <fullName>Boat Cruises</fullName>
            </value>
            <value>
                <fullName>Boating</fullName>
            </value>
            <value>
                <fullName>Boules</fullName>
            </value>
            <value>
                <fullName>Bowls</fullName>
            </value>
            <value>
                <fullName>Canoeing</fullName>
            </value>
            <value>
                <fullName>Catch-and-release Fishing</fullName>
            </value>
            <value>
                <fullName>Child Friendly Activities</fullName>
            </value>
            <value>
                <fullName>Cooking Courses</fullName>
            </value>
            <value>
                <fullName>Cultural Tours</fullName>
            </value>
            <value>
                <fullName>Cycling</fullName>
            </value>
            <value>
                <fullName>Deep Sea Fishing</fullName>
            </value>
            <value>
                <fullName>Elephant-back Safaris</fullName>
            </value>
            <value>
                <fullName>Fine Dining</fullName>
            </value>
            <value>
                <fullName>Fishing</fullName>
            </value>
            <value>
                <fullName>Fly Fishing</fullName>
            </value>
            <value>
                <fullName>Game Drives</fullName>
            </value>
            <value>
                <fullName>Game Viewing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>