force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Activities_On_Site__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Activities_On_Site__c</fullName>
    <label>Activities On Site</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aboriginal Rock Art Tours</fullName>
            </value>
            <value>
                <fullName>Beach Drop Off</fullName>
            </value>
            <value>
                <fullName>Big 5</fullName>
            </value>
            <value>
                <fullName>Bird Watching</fullName>
            </value>
            <value>
                <fullName>Boating</fullName>
            </value>
            <value>
                <fullName>Boules</fullName>
            </value>
            <value>
                <fullName>Bowls</fullName>
            </value>
            <value>
                <fullName>Canoeing</fullName>
            </value>
            <value>
                <fullName>Catch-and-release Fishing</fullName>
            </value>
            <value>
                <fullName>Cooking Courses</fullName>
            </value>
            <value>
                <fullName>Cycling</fullName>
            </value>
            <value>
                <fullName>Elephant-back Safaris</fullName>
            </value>
            <value>
                <fullName>Elephant Interaction</fullName>
            </value>
            <value>
                <fullName>Fine Dining</fullName>
            </value>
            <value>
                <fullName>Fishing</fullName>
            </value>
            <value>
                <fullName>Game Drives</fullName>
            </value>
            <value>
                <fullName>Game Viewing</fullName>
            </value>
            <value>
                <fullName>Game Viewing Hide</fullName>
            </value>
            <value>
                <fullName>Game Walks</fullName>
            </value>
            <value>
                <fullName>Garden Tours</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Gorilla Tracking</fullName>
            </value>
            <value>
                <fullName>Gourmet Picnic</fullName>
            </value>
            <value>
                <fullName>Helicopter Scenic Flights</fullName>
            </value>
            <value>
                <fullName>High Tea</fullName>
            </value>
            <value>
                <fullName>Horse-back Safaris</fullName>
            </value>
            <value>
                <fullName>Horse Riding</fullName>
            </value>
            <value>
                <fullName>Jet Skis</fullName>
            </value>
            <value>
                <fullName>Kayaking</fullName>
            </value>
            <value>
                <fullName>Kite Surfing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>