force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Agent_Customer__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Agent_Customer__c</fullName>
    <label>Agent Customer #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>