force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Arrange_By__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Arrange_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arrange By</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Suppliers</relationshipLabel>
    <relationshipName>Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>