force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Arrivals__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Arrivals__c</fullName>
    <label>Arrivals</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>