force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Available_Services__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Available_Services__c</fullName>
    <label>Available Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airport Shuttle</fullName>
            </value>
            <value>
                <fullName>Airport Shuttle (Available)</fullName>
            </value>
            <value>
                <fullName>Airport Shuttle (Complimentary)</fullName>
            </value>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>Babysitting Service</fullName>
            </value>
            <value>
                <fullName>Chauffeur Service</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Foreign Exchange</fullName>
            </value>
            <value>
                <fullName>Laundry Service</fullName>
            </value>
            <value>
                <fullName>Room Service</fullName>
            </value>
            <value>
                <fullName>Room Service (24hrs)</fullName>
            </value>
            <value>
                <fullName>Travel Desk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>