force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Billing_Country__c</fullName>
    <formula>sugati__S_Country__c</formula>
    <label>Billing Country</label>
    <type>Text</type>
</CustomField>