force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Billing_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Billing_Currency__c</fullName>
    <label>Billing Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>