force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Billing_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Billing_Post_Code__c</fullName>
    <label>Billing Post Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>