force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Billing_Street__c</fullName>
    <description>Billing Street</description>
    <label>Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>