force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Child_Max_Age__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Child_Max_Age__c</fullName>
    <label>Child Max Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>