force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Child_Min_Age__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Child_Min_Age__c</fullName>
    <inlineHelpText>Min age criteria for the child for calculating the service rates.</inlineHelpText>
    <label>Child Min Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>