force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Commission_Value__c</fullName>
    <description>Agent Commission</description>
    <inlineHelpText>Agent Commission</inlineHelpText>
    <label>Commission Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>