force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Continent__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Continent__c</fullName>
    <formula>IF(ISBLANK(sugati__S_What_to_do__c) , sugati__S_Where_to_go__r.sugati__W_Continent__c , sugati__S_What_to_do__r.sugati__WH_Continent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Continent</label>
    <type>Text</type>
</CustomField>