force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Country__c</fullName>
    <formula>IF(ISBLANK(sugati__S_What_to_do__c) ,  sugati__S_Where_to_go__r.sugati__W_Country__r.Name ,  sugati__S_What_to_do__r.sugati__WH_Country__r.Name )</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>