force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Cruise_Fare_Set__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Cruise_Fare_Set__c</fullName>
    <inlineHelpText>comma separated deal_code from cruise.fare_sets</inlineHelpText>
    <label>Fare Set (Exclude)</label>
    <type>TextArea</type>
</CustomField>