force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Default_Costing_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Default_Costing_Type__c</fullName>
    <label>Default Costing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Markup</fullName>
                <default>true</default>
                <label>Markup</label>
            </value>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>