force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Dont_include_in_tour_rate_calculation__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Dont_include_in_tour_rate_calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, the supplier costs will not automatically get calculated in TourCalculationService - usually used for custom rate calculations (e.g. travel insurance)</description>
    <inlineHelpText>If this is checked, the supplier costs will not automatically get calculated in TourCalculationService - usually used for custom rate calculations (e.g. travel insurance)</inlineHelpText>
    <label>Don&apos;t include in tour rate calculation</label>
    <type>Checkbox</type>
</CustomField>