force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Duration__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Duration__c</fullName>
    <label>Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>