force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Email__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>