force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Emergency_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Emergency_Phone_2__c</fullName>
    <label>Emergency Phone 2</label>
    <type>Phone</type>
</CustomField>