force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Enable_Inventory_Management__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Enable_Inventory_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>It will allow Sugati to do inventory management for the accommodations. It will block the rooms once they are booked.</inlineHelpText>
    <label>Enable Inventory Management</label>
    <type>Checkbox</type>
</CustomField>