force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Estimated_Cost__c</fullName>
    <inlineHelpText>Only For Accommodation</inlineHelpText>
    <label>Estimated Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>