force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Found_on_Multicom__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Found_on_Multicom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Found on Multicom?</label>
    <type>Checkbox</type>
</CustomField>