force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Languages__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Languages__c</fullName>
    <description>Languages facilitated by the supplier</description>
    <label>Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Flemish</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Swahili</fullName>
            </value>
            <value>
                <fullName>Xhosa</fullName>
            </value>
            <value>
                <fullName>Zulu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>