force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Latitude__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Latitude__c</fullName>
    <label>Latitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>