force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Margin_Note__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Margin_Note__c</fullName>
    <label>Margin Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>