force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Mobile__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Mobile__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>