force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Multicom_Accommodation_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Multicom_Accommodation_Id__c</fullName>
    <label>Multicom Accommodation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>