force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_Multicom_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Multicom_Supplier_Name__c</fullName>
    <label>Multicom Supplier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>