force-app/main/default/objects/sugati__Supplier__c/fields/sugati__S_No_of_Rooms__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_No_of_Rooms__c</fullName>
    <description>Number of rooms available at the accommodation/venue/establishment etc.</description>
    <label>No. of Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>